# tclust

./: .gitignore  .gitmodules
firstDraft/: .ycm_extra_conf.py  CMakeLists.txt  cmake_install.cmake
firstDraft/R/: DEBUG_linker.R  deltaDist.R  karate_link.txt  ktest.txt  new_f.txt
firstDraft/R/data/: test_delta_brown.txt  test_pos_brown_square.txt
firstDraft/data/test/: data.txt  data_gs.txt
firstDraft/data/test2/: data_gs.txt
firstDraft/doc/html/: CMakeFiles_22_88_812_82_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  CMakeFiles_22_88_812_82_2CompilerIdC_2CMakeCCompilerId_8c.html  CMakeFiles_22_88_812_82_2CompilerIdC_2CMakeCCompilerId_8c.js  ClusteringResult_8cpp.html  ClusteringResult_8cpp__incl.md5  ClusteringResult_8hpp.html  ClusteringResult_8hpp__incl.map  ClusteringResult_8hpp__incl.md5  ConnectedComponent_8cpp.html  ConnectedComponent_8cpp__incl.map  ConnectedComponent_8hpp.js  ConnectedComponent_8hpp__dep__incl.map  ConnectedComponent_8hpp__incl.map  ConnectedComponent_8hpp__incl.md5  ConnectedComponent_8hpp_source.html  FORCE_8cpp.html  FORCE_8cpp__incl.md5  FORCE_8hpp.js  FORCE_8hpp__dep__incl.map  FORCE_8hpp__incl.md5  FORCE_8hpp_source.html  FindConnectedComponents_8cpp__incl.map  FindConnectedComponents_8hpp.html  FindConnectedComponents_8hpp.js  FindConnectedComponents_8hpp__incl.map  Result_8cpp__incl.map  Result_8cpp__incl.md5  Result_8hpp.html  Result_8hpp__incl.md5  TransClust_8cpp__incl.md5  TransClust_8hpp.html  TransClust_8hpp__dep__incl.map  TransClust_8hpp__incl.map  TransClust_8hpp_source.html  TriangularMatrix_8cpp.html  TriangularMatrix_8cpp__incl.map  TriangularMatrix_8cpp__incl.md5  TriangularMatrix_8hpp__dep__incl.md5  TriangularMatrix_8hpp__incl.md5  annotated.html  (+80 more)
firstDraft/doc/latex/: CMakeFiles_22_88_812_82_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.tex  CMakeFiles_22_88_812_82_2CompilerIdC_2CMakeCCompilerId_8c.tex  ClusteringResult_8cpp.tex  ClusteringResult_8cpp__incl.md5  ClusteringResult_8hpp.tex  ClusteringResult_8hpp__dep__incl.md5  ClusteringResult_8hpp__incl.md5  ConnectedComponent_8cpp.tex  ConnectedComponent_8cpp__incl.md5  ConnectedComponent_8hpp.tex  ConnectedComponent_8hpp__dep__incl.md5  ConnectedComponent_8hpp__incl.md5  FORCE_8cpp.tex  FORCE_8cpp__incl.md5  FORCE_8hpp.tex  FORCE_8hpp__dep__incl.md5  FORCE_8hpp__incl.md5  FindConnectedComponents_8cpp.tex  FindConnectedComponents_8cpp__incl.md5  FindConnectedComponents_8hpp.tex  FindConnectedComponents_8hpp__dep__incl.md5  FindConnectedComponents_8hpp__incl.md5  Result_8cpp.tex  Result_8cpp__incl.md5  Result_8hpp.tex  Result_8hpp__dep__incl.md5  Result_8hpp__incl.md5  TransClust_8cpp.tex  TransClust_8cpp__incl.md5  TransClust_8hpp.tex  TransClust_8hpp__dep__incl.md5  TransClust_8hpp__incl.md5  TriangularMatrix_8cpp.tex  TriangularMatrix_8cpp__incl.md5  TriangularMatrix_8hpp.tex  TriangularMatrix_8hpp__dep__incl.md5  TriangularMatrix_8hpp__incl.md5  _8ycm__extra__conf_8py.tex  annotated.tex  build_2CMakeFiles_22_88_812_82_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.tex  (+68 more)
firstDraft/include/: ClusteringResult.hpp  ConnectedComponent.hpp  FindConnectedComponents.hpp  Result.hpp  TransClust.hpp  TriangularMatrix.hpp
firstDraft/src/: CMakeLists.txt  ClusteringResult.cpp  FindConnectedComponents.cpp  Result.cpp  TransClust.cpp  TriangularMatrix.cpp  cmake_install.cmake  program.cpp
transclust/: .ycm_extra_conf.py  CMakeLists.txt  Doxyfile  Makefile  README.md  SETUP  SETUP.sh  old_CMakeCache.txt
transclust/R/: .RData  .Rhistory  DEBUG_pos.R  cost_graphs.R  execution_time.R  geometrick_linking_dist_cost.R  karate_analysis.R  karate_pos.txt  plot_fscore.R  pos_de.txt  shape.txt  test_test.txt
transclust/R/data/: test.txt  test_delta_karate.txt  test_pos_brown.txtmajke  test_pos_karate.txt  test_w_cool.txt
transclust/R/fpt_tuning/: .RData  .Rhistory  fpt_test.txt  plot_fpt_tuning.R
transclust/data/brown/: cpp_transclust_result.txt  sfld_brown_et_al_amidohydrolases_protein_similarities_for_beh.txt  transclust_result.txt
transclust/data/karateclub/: Zachary_karate_club_gold_standard.gs  Zachary_karate_club_similarities.txt  cpp_transclust_fpt_result.txt  cpp_transclust_result.txt  fpt.txt  transclust_fpt_result.txt  transclust_result.txt
transclust/data/test/: cpp_data_result.txt  transclust_data_result.txt
transclust/data/test2/: data.txt
transclust/doc/html/: CMakeFiles_22_88_812_82_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.js  ClusteringResult_8cpp.html  ClusteringResult_8cpp__incl.map  ClusteringResult_8cpp__incl.md5  ClusteringResult_8hpp.html  ClusteringResult_8hpp__dep__incl.map  ClusteringResult_8hpp__dep__incl.md5  ClusteringResult_8hpp__incl.md5  ClusteringResult_8hpp_source.html  ConnectedComponent_8cpp.html  ConnectedComponent_8cpp__incl.md5  ConnectedComponent_8hpp.html  ConnectedComponent_8hpp__dep__incl.md5  ConnectedComponent_8hpp__incl.md5  ConnectedComponent_8hpp_a6a69b0f8fa6235cb9ec103446b24a274_icgraph.map  ConnectedComponent_8hpp_a6a69b0f8fa6235cb9ec103446b24a274_icgraph.md5  ConnectedComponent_8hpp_source.html  FORCE_8cpp.html  FORCE_8cpp.js  FORCE_8cpp__incl.map  FORCE_8cpp__incl.md5  FORCE_8hpp.html  FORCE_8hpp__dep__incl.md5  FORCE_8hpp__incl.map  FORCE_8hpp__incl.md5  FORCE_8hpp_source.html  FindConnectedComponents_8cpp.html  FindConnectedComponents_8cpp.js  FindConnectedComponents_8cpp__incl.md5  FindConnectedComponents_8hpp.html  FindConnectedComponents_8hpp__dep__incl.map  (+180 more)
transclust/include/: ClusteringResult.hpp  ConnectedComponent.hpp  DEBUG.hpp  FORCE.hpp  FPT.hpp  FindConnectedComponents.hpp  New_FPT.hpp  Result.hpp  TransClust.hpp  TriangularMatrix.hpp
transclust/old_files/: TriangularMatrix.hpp
transclust/scripts/: .dropbox  .stxxl  cluster_cost.py  cluster_score.py  compare.py  compare_cpp_java.py  fscore.py  genTestCase.py  gen_test_data.py  plot_scores.sh  rebuildAndCompile.sh  tclust_result_parser.py  test_pairs.txt
transclust/src/: CMakeLists.txt  ConnectedComponent.cpp  FORCE.cpp  FPT.cpp  FindConnectedComponents.cpp  Makefile  New_FTP.cpp  Result.cpp  TransClust.cpp  TriangularMatrix.cpp  program.cpp  tccli.cpp
(+267 files in other folders)
